Modified scss and added new files

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,1 +1,10 @@
 @import "header";
+@import "default";
+@import "header";
+@import "about-gallery";
+@import "main";
+@import "features";
+@import "requirements";
+@import "newsletter";
+@import "quotes";
+@import "footer";
