--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -13,12 +13,26 @@
     margin-block-start: 179px;
 }
 
+.game_landing__header__logo {
+    padding-block-start: 8px;
+}
+
+.game_landing__header__label__dropdown {
+    padding-inline-end: 29px;
+    border-inline-end: 0.873968px solid #FFFFFF;
+}
+
+.game_landing__header__homepage {
+    margin-inline-start: 19px;
+}
+
 form {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: start;
     flex-wrap: wrap;
+    margin-block-start: -24px;
 }
 
 .game_landing__header__homepage {
@@ -26,11 +40,20 @@ form {
     background-repeat: no-repeat;
 }
 
-.game_landing__header___list {
+.game_landing__header__list {
     display: flex;
     background-color: #FFB548;
     padding: 12px;
     border-radius: 2.94008px;
+}
+
+.game_landing__header__steam {
+    border-inline-end: 0.642383px solid #1A1917;
+    padding-inline-end: 11px;
+}
+
+.game_landing__header__amount {
+    padding-inline-start: 8px;
 }
 
 .game_landing__header__list__data_store {
@@ -52,4 +75,48 @@ form {
     background-position: bottom;
     padding-block-end: 1rem;
     color: #FFFFFF;
+}
+
+
+// menu
+.game_landing__header__homepage > [type="checkbox"]:checked ~ .menu_dropdown {
+    display: none;
+}
+
+.game_landing__header__menu {
+    padding: 1rem;
+    background-color: #f8f8f8;
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 250px;
+    box-shadow: 0 0 50px rgba(0,0,0,.5);
+    transform: translateX(-110%);
+    transition: transform 0.3s;
+}
+
+[type="checkbox"]:checked ~ .game_landing__header__menu {
+    transform: translateX(0);
+  }
+
+[type="checkbox"]:checked ~ header .game_landing__header__homepage {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,.25);
+  }
+  
+body > [type="checkbox"]:checked ~ main {
+    z-index: 1; 
+}
+
+span {
+    color: transparent;
 }
