Fixed background color

--- a/scss/_about-gallery.scss
+++ b/scss/_about-gallery.scss
@@ -1,12 +1,12 @@
 @import "variable";
 
 .game_landing__container__gallery {
-    // background-image: url('../images/bg-image-2.png');
-    // background-repeat: no-repeat;
+    //background-image: url('../webroot/images/gallery-background-transparent.png'),
+    //    url('../images/bg-image-2.png');
+   // background-repeat: no-repeat;
     background-size: cover;
     padding-block-start: 19px;
     padding-block-end: 36px;
-    // background-color: rgba(19, 18, 18, 0.5);
 }
 
 .game_landing__container__gallery__lists {
