--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -1,3 +1,21 @@
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-style: normal;
+  src: local("Open Sans Regular"), local("Open-Sans-Regular") url("../fonts/openSans-regular.woff2") formt(woff2), url("../fonts/openSans-regular.woff") format(woff); }
+
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 700;
+  font-style: normal;
+  src: local("Open Sans Bold"), local("Open-Sans-Bold") url("../fonts/openSans-bold.woff2") formt(woff2), url("../fonts/openSans-bold.woff") format(woff); }
+
+@font-face {
+  font-family: "Bebas Neue";
+  font-weight: 400;
+  font-style: normal;
+  src: local("Bebas Neue"), local("Bebas-Neue-Regular") url("../fonts/bebasNeue-regular.woff2") formt(woff2), url("../fonts/bebasNeue-regular.woff") format(woff); }
+
 .game_landing__header {
   background-image: url("../images/angelina-andreas-jungleruins.png");
   background-repeat: no-repeat;
@@ -120,12 +138,33 @@ span {
 .game_landing__header__menu__lists__links:hover {
   color: #FFB548; }
 
+html {
+  font-family: 'Open Sans', sans-serif; }
+
 body {
   background-color: #000000;
   color: #FFFFFF; }
 
+h2 {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 18px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  color: #FFFFFF; }
+
 h3 {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 21px;
+  line-height: 21px;
+  letter-spacing: 2px;
   color: #FFB548; }
+
+h4 {
+  font-size: 33px;
+  line-height: 33px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #FFFFFF; }
 
 li {
   list-style: none; }
@@ -300,4 +339,15 @@ span {
 
 .game_landing__container__features {
   background-image: url("../images/feature-background-semi-transparent.png"), url("../images/feature-background-image.png");
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-size: cover;
+  padding-block-start: 50px;
+  padding-block-end: 85px;
+  margin-inline-start: -68px; }
+
+.game_landing__container__features__wrapper {
+  max-width: 281px;
+  margin-inline-start: auto;
+  padding-inline-end: 24px;
+  text-align: justify; }
