--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -14,19 +14,23 @@ h2 {
     font-size: 18px;
     line-height: 18px;
     letter-spacing: 2px;
+    font-weight: 400;
     color: #FFFFFF;
 }
 
 h3 {
     font-family: 'Bebas Neue', sans-serif;
     font-size: 21px;
+    font-weight: 400;
     line-height: 21px;
     letter-spacing: 2px;
     color: #FFB548;
 }
 
 h4 {
+    font-family: 'Bebas Neue', sans-serif;
     font-size: 33px;
+    font-weight: 400;
     line-height: 33px;
     letter-spacing: 3px;
     text-transform: uppercase;
