--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -21,6 +21,20 @@
   background-repeat: no-repeat;
   background-size: cover; }
 
+.game_landing__header__title {
+  font-size: 33px;
+  line-height: 33px;
+  letter-spacing: 3px; }
+
+.game_landing__header__subtitle {
+  font-size: 18px;
+  line-height: 18px;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  margin-block-start: 0; }
+
 .game_landing__header__store {
   display: flex;
   flex-direction: column;
@@ -150,17 +164,21 @@ h2 {
   font-size: 18px;
   line-height: 18px;
   letter-spacing: 2px;
+  font-weight: 400;
   color: #FFFFFF; }
 
 h3 {
   font-family: 'Bebas Neue', sans-serif;
   font-size: 21px;
+  font-weight: 400;
   line-height: 21px;
   letter-spacing: 2px;
   color: #FFB548; }
 
 h4 {
+  font-family: 'Bebas Neue', sans-serif;
   font-size: 33px;
+  font-weight: 400;
   line-height: 33px;
   letter-spacing: 3px;
   text-transform: uppercase;
@@ -176,6 +194,20 @@ a {
   background-image: url("../images/angelina-andreas-jungleruins.png");
   background-repeat: no-repeat;
   background-size: cover; }
+
+.game_landing__header__title {
+  font-size: 33px;
+  line-height: 33px;
+  letter-spacing: 3px; }
+
+.game_landing__header__subtitle {
+  font-size: 18px;
+  line-height: 18px;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  margin-block-start: 0; }
 
 .game_landing__header__store {
   display: flex;
