--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -383,3 +383,36 @@ span {
   margin-inline-start: auto;
   padding-inline-end: 24px;
   text-align: justify; }
+
+.game_landing__container__requirements {
+  background-image: url("../images/requirements-background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom; }
+
+.game_landing__container__requirements__header {
+  padding-block-start: 60px; }
+
+.game_landing__container__requirements__header__title {
+  margin-block-end: -30px; }
+
+.game_landing__container__requirements__list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); }
+
+.game_landing__container__requirements__list__inner {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  color: #FFFFFF;
+  border: 0.504234px solid #979797;
+  padding-inline-start: 9px;
+  padding-block-end: 20px;
+  border-block-end: none;
+  margin: 0; }
+
+.game_landing__container__requirements__list__inner:last-of-type {
+  grid-column: 1 / 3;
+  border-block-end: 0.504234px solid #979797;
+  margin-block-end: 250px; }
