Fixed the image

--- a/scss/_about-gallery.scss
+++ b/scss/_about-gallery.scss
@@ -9,30 +9,6 @@
     padding-block-end: 36px;
 }
 
-.game_landing__container__gallery__lists {
-    position: relative;
-}
-
-.game_landing__container__gallery__lists-1 {
-    position: absolute;
-    left: 0;
-    z-index: -1;
-}
-
-.game_landing__container__gallery__lists-2 {
-    position: absolute;
-    left: 15%;
-    top: 4%;
-    z-index: -1;
-}
-
-.game_landing__container__gallery__lists-3 {
-    position: absolute;
-    left: 20%;
-    top: 8%;
-    z-index: -2;
-}
-
 .game_landing__container__gallery__header {
     border-bottom: 2px #FFFFFF solid;
     border-radius: 2.34486px;
@@ -54,3 +30,30 @@
     padding-block-start: 16px;
     padding-block-end: 51px;
 }
+
+
+.game_landing__container__gallery__lists {
+    position: relative;
+    z-index: 1;
+}
+
+.game_landing__container__gallery__lists_2 {
+    position: absolute;
+    left: 15%;
+    top: 4%;
+    z-index: -1;
+}
+
+.game_landing__container__gallery__lists_3 {
+    position: absolute;
+    left: 20%;
+    top: 8%;
+    z-index: -2;
+}
+
+.game_landing__container__gallery__lists_image {
+    max-width: 100%;
+    display: block;
+}
+
+
