--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -17,8 +17,9 @@
   src: local("Bebas Neue"), local("Bebas-Neue-Regular") url("../fonts/bebasNeue-regular.woff2") formt(woff2), url("../fonts/bebasNeue-regular.woff") format(woff); }
 
 .game_landing__header {
-  background-image: url("../images/angelina-andreas-jungleruins.png");
+  background-image: url("../images/angelina-andreas-big.png");
   background-repeat: no-repeat;
+  background-position-x: 27%;
   background-size: cover; }
 
 .game_landing__header__title {
@@ -33,7 +34,7 @@
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #FFFFFF;
-  margin-block-start: 0; }
+  margin-block-start: -15px; }
 
 .game_landing__header__store {
   display: flex;
@@ -191,8 +192,9 @@ a {
   text-decoration: none; }
 
 .game_landing__header {
-  background-image: url("../images/angelina-andreas-jungleruins.png");
+  background-image: url("../images/angelina-andreas-big.png");
   background-repeat: no-repeat;
+  background-position-x: 27%;
   background-size: cover; }
 
 .game_landing__header__title {
@@ -207,7 +209,7 @@ a {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #FFFFFF;
-  margin-block-start: 0; }
+  margin-block-start: -15px; }
 
 .game_landing__header__store {
   display: flex;
