--- a/scss/_quotes.scss
+++ b/scss/_quotes.scss
@@ -28,6 +28,10 @@
     color: #1A1917;
 }
 
+.game_landing__container__quotes__navigation__list_quote {
+    padding-block-start: 29px;
+    padding-block-end: 17px;
+}
 
 .game_landing__container__quotes__navigation__list {
     margin-block-end: 20px;
