--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -443,6 +443,10 @@ body > [type="checkbox"]:checked ~ main {
   border-radius: 2.94008px;
   color: #1A1917; }
 
+.game_landing__container__quotes__navigation__list_quote {
+  padding-block-start: 29px;
+  padding-block-end: 17px; }
+
 .game_landing__container__quotes__navigation__list {
   margin-block-end: 20px;
   margin-block-start: 50px;
