--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -16,11 +16,19 @@
 .game_landing__footer__navigation {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .game_landing__footer__list__navigation__about {
     display: flex;
     flex-direction: row;
+}
+
+.game_landing__footer__list__navigation__about:nth-of-type(1) > .game_landing__footer__list__navigation__about__game:nth-of-type(1) {
+    background-image: url('../images/red-rectangle.svg');
+    background-repeat: no-repeat;
+    background-position-x: 25%;
 }
 
 .game_landing__footer__list__navigation__about__game {
@@ -42,6 +50,12 @@
     margin-block-start: 44px;
     padding-block-end: 41px;
     border-block-end: 0.873968px solid #FFFFFF;
+    justify-content: center;
+    align-items: center;
+}
+
+.game_landing__footer__list__navigation__social__link_curcor {
+    margin-inline-start: -10px;
 }
 
 .game_landing__footer__list__navigation__social__link {
@@ -65,4 +79,15 @@
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: #FFFFFF;
+}
+
+.game_landing__footer__list__navigation__license {
+    text-align: center;
+}
+
+.game_landing__footer__list__navigation__license__link:nth-of-type(3) > .game_landing__footer__navigation__licence__link {
+    border-inline-start: #FFFFFF solid 2px;
+    border-inline-end: #FFFFFF solid 2px;
+    padding-inline-end: 16px;
+    padding-inline-start: 16px;
 }
