--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -5,22 +5,52 @@
         url('../images/feature-background-semi-transparent.png'),
         url('../images/feature-background-image.png');
     background-repeat: no-repeat;
-    background-position: top left;
-    background-size: cover;
+    background-size: 800px;
     padding-block-start: 50px;
-    padding-block-end: 85px;
-    margin-inline-start: -68px;
+    margin-inline-start: -100px;
+    padding-inline-end: 24px;
+}
+
+.game_landing__container__features__subtitle {
+    margin-block-end: -38px;
+}
+
+.game_landing__container__features__header {
+    padding-inline-start: 30px;
 }
 
 .game_landing__container__features__wrapper {
-    max-width: 281px;
+    max-width: calc(100% / 2);
     margin-inline-start: auto;
-    padding-inline-end: 24px;
     text-align: justify;
+    padding-block-end: 61px;
 }
 
-// .game_landing__container__features__description,
-// .game_landing__container__features__header {
-//     padding-inline-start: 115px;
-//     padding-inline-end: 24px;
-// }
+.game_landing__container__features__description_title {
+    padding-inline-start: 30px;
+}
+
+.game_landing__container__features__description:nth-of-type(1) {
+    background-image: url('../images/ellipse-white.png');
+    background-repeat: no-repeat;
+}
+
+.game_landing__container__features__description:nth-of-type(2) {
+    background-image: url('../images/ellipse-transparent.png');
+    background-repeat: no-repeat;
+}
+
+.game_landing__container__features__description:nth-of-type(3) {
+    background-image: url('../images/ellipse-transparent.png');
+    background-repeat: no-repeat;
+}
+
+.game_landing__container__features__description_text {
+    border-inline-start: 1.95955px solid #FFFFFF;
+    margin-inline-start: 7px;
+    padding-block-end: 20px;
+    padding-block-start: 20px;
+    margin-block-end: -23px;
+    margin-block-start: -27px;
+    padding-inline-start: 20px;
+}
