--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -40,6 +40,10 @@
     border-inline-end: 0.873968px solid #FFFFFF;
 }
 
+select .game_landing__header__language_select__option:checked {
+    color: gold;
+}
+
 .game_landing__header__homepage {
     margin-inline-start: 19px;
 }
@@ -112,6 +116,10 @@ form {
     color: #FFB548;
 }
 
+.game_landing__header__navigation__union {
+    display: none;
+}
+
 // menu
 .menu_dropdown {
     display: none;
@@ -178,7 +186,11 @@ body > [type="checkbox"]:checked ~ main {
         background-image: url(../images/angelina-andreas-big.png);
         background-repeat: no-repeat;
         background-size: cover;
-        padding-block-start: 6px;
+        padding-block-start: 36px;
+    }
+
+    .game_landing__header__title {
+        padding-block-start: 235px;
     }
 
     .game_landing__header__logo {
@@ -202,14 +214,18 @@ body > [type="checkbox"]:checked ~ main {
         flex-direction: row;
         padding-block-start: 6px;
         position: absolute;
-        top: 0;
+        top: 35px;
         right: 0;
         padding-inline-end: 121px;
     }
 
+    .game_landing__header__navigation__union {
+        display: block;
+    }
+    
 
-    .game_landing__header__navigation__union__ul__list_link {
-        padding-block-end: 17px;
+    .game_landing__header__navigation__union__ul__list:last-of-type {
+        padding-inline-start: 17px;
     }
 
     .game_landing__header__menu {
@@ -219,6 +235,7 @@ body > [type="checkbox"]:checked ~ main {
         box-shadow: none;
         transform: none;
         transition: none;
+        padding-block-start: 43px;
     }
 
     .game_landing__header__menu__ul_list {
@@ -229,6 +246,10 @@ body > [type="checkbox"]:checked ~ main {
 
     .game_landing__header__menu__lists {
         padding-inline-end: 32px;
+    }
+
+    .game_landing__header__store__progress {
+        display: none;
     }
     
 }
