--- a/scss/_quotes.scss
+++ b/scss/_quotes.scss
@@ -86,3 +86,41 @@
     padding-block-end: 20px;
     padding-inline-start: 60px;
 }
+
+@media(min-width: 1200px) {
+    .game_landing__container__quotes {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .game_landing__container__quotes__header {
+        max-width: 437px;
+        margin-block-start: auto;
+        margin-inline-start: 130px;
+        margin-block-end: auto;
+        margin-inline-end: auto;
+    }
+
+    .game_landing__container__quotes__navigation {
+        max-width: calc(100% - 437px);
+        padding-inline-end: 47px;
+    }
+
+    .testemonials_link {
+        text-align: start;
+    }
+
+    .game_landing__container__quotes__navigation__list:nth-of-type(1) {
+        margin-inline-start: 193px;
+    }
+
+    .game_landing__container__quotes__navigation__list:nth-of-type(2) {
+        margin-inline-end: 100px;
+        margin-inline-start: 73px;
+    }
+
+    .game_landing__container__quotes__navigation__list:nth-of-type(3) {
+        margin-inline-start: 193px;
+    }
+
+}
